--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Jinja2==3.1.2
 lxml==4.9.3
 macholib==1.16.3
 MarkupSafe==2.1.3
-numpy==1.21.6
+numpy>=1.25.0
 openpyxl==3.1.2
 pandas==1.3.5
 pyinstaller==5.13.2
